备份定时代码

--- a/echarts/pie_base.html
+++ b/echarts/pie_base.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="97f1a2c8b9dc45a3a23edffc0742ecc5" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="8b9fbe059d3f4c42bba1c8335e5461a9" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_97f1a2c8b9dc45a3a23edffc0742ecc5 = echarts.init(
-            document.getElementById('97f1a2c8b9dc45a3a23edffc0742ecc5'), 'white', {renderer: 'canvas'});
-        var option_97f1a2c8b9dc45a3a23edffc0742ecc5 = {
+        var chart_8b9fbe059d3f4c42bba1c8335e5461a9 = echarts.init(
+            document.getElementById('8b9fbe059d3f4c42bba1c8335e5461a9'), 'white', {renderer: 'canvas'});
+        var option_8b9fbe059d3f4c42bba1c8335e5461a9 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -52,31 +52,31 @@
             "clockwise": true,
             "data": [
                 {
-                    "name": "\u54c8\u58eb\u5947",
-                    "value": 26
+                    "name": "\u886c\u886b",
+                    "value": 112
                 },
                 {
-                    "name": "\u8428\u6469\u8036",
-                    "value": 20
+                    "name": "\u6bdb\u8863",
+                    "value": 54
                 },
                 {
-                    "name": "\u6cf0\u8fea",
-                    "value": 57
+                    "name": "\u9886\u5e26",
+                    "value": 122
                 },
                 {
-                    "name": "\u91d1\u6bdb",
-                    "value": 140
-                },
-                {
-                    "name": "\u7267\u7f8a\u72ac",
-                    "value": 57
-                },
-                {
-                    "name": "\u5409\u5a03\u5a03",
+                    "name": "\u88e4\u5b50",
                     "value": 101
                 },
                 {
-                    "name": "\u67ef\u57fa",
+                    "name": "\u98ce\u8863",
+                    "value": 142
+                },
+                {
+                    "name": "\u9ad8\u8ddf\u978b",
+                    "value": 134
+                },
+                {
+                    "name": "\u889c\u5b50",
                     "value": 70
                 }
             ],
@@ -105,13 +105,13 @@
     "legend": [
         {
             "data": [
-                "\u54c8\u58eb\u5947",
-                "\u8428\u6469\u8036",
-                "\u6cf0\u8fea",
-                "\u91d1\u6bdb",
-                "\u7267\u7f8a\u72ac",
-                "\u5409\u5a03\u5a03",
-                "\u67ef\u57fa"
+                "\u886c\u886b",
+                "\u6bdb\u8863",
+                "\u9886\u5e26",
+                "\u88e4\u5b50",
+                "\u98ce\u8863",
+                "\u9ad8\u8ddf\u978b",
+                "\u889c\u5b50"
             ],
             "selected": {},
             "show": true,
@@ -146,7 +146,7 @@
         }
     ]
 };
-        chart_97f1a2c8b9dc45a3a23edffc0742ecc5.setOption(option_97f1a2c8b9dc45a3a23edffc0742ecc5);
+        chart_8b9fbe059d3f4c42bba1c8335e5461a9.setOption(option_8b9fbe059d3f4c42bba1c8335e5461a9);
     </script>
 </body>
 </html>
