--- a/echarts/funnel_label_inside.html
+++ b/echarts/funnel_label_inside.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="bc74b015b1c94c8691d5cc3ac4da88bd" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="3eab5760cdeb4a7899a1bbf39f5ef967" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_bc74b015b1c94c8691d5cc3ac4da88bd = echarts.init(
-            document.getElementById('bc74b015b1c94c8691d5cc3ac4da88bd'), 'white', {renderer: 'canvas'});
-        var option_bc74b015b1c94c8691d5cc3ac4da88bd = {
+        var chart_3eab5760cdeb4a7899a1bbf39f5ef967 = echarts.init(
+            document.getElementById('3eab5760cdeb4a7899a1bbf39f5ef967'), 'white', {renderer: 'canvas'});
+        var option_3eab5760cdeb4a7899a1bbf39f5ef967 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -53,38 +53,38 @@
             "data": [
                 {
                     "name": "\u5c0f\u7c73",
-                    "value": 74
+                    "value": 68
                 },
                 {
                     "name": "\u4e09\u661f",
-                    "value": 150
+                    "value": 51
                 },
                 {
                     "name": "\u534e\u4e3a",
-                    "value": 136
+                    "value": 25
                 },
                 {
                     "name": "\u82f9\u679c",
-                    "value": 41
+                    "value": 120
                 },
                 {
                     "name": "\u9b45\u65cf",
-                    "value": 141
+                    "value": 99
                 },
                 {
                     "name": "VIVO",
-                    "value": 149
+                    "value": 112
                 },
                 {
                     "name": "OPPO",
-                    "value": 78
+                    "value": 147
                 }
             ],
             "sort": "descending",
             "gap": 0,
             "label": {
                 "show": true,
-                "position": "top",
+                "position": "inside",
                 "margin": 8
             }
         }
@@ -135,13 +135,13 @@
     },
     "title": [
         {
-            "text": "Funnel-\u57fa\u672c\u793a\u4f8b",
+            "text": "Funnel-\u5185\u90e8\u6807\u7b7e",
             "padding": 5,
             "itemGap": 10
         }
     ]
 };
-        chart_bc74b015b1c94c8691d5cc3ac4da88bd.setOption(option_bc74b015b1c94c8691d5cc3ac4da88bd);
+        chart_3eab5760cdeb4a7899a1bbf39f5ef967.setOption(option_3eab5760cdeb4a7899a1bbf39f5ef967);
     </script>
 </body>
 </html>
