--- a/echarts/funnel_label_inside_sort.html
+++ b/echarts/funnel_label_inside_sort.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="bc74b015b1c94c8691d5cc3ac4da88bd" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="4a334794338549f1a56a35ba3b10a0a3" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_bc74b015b1c94c8691d5cc3ac4da88bd = echarts.init(
-            document.getElementById('bc74b015b1c94c8691d5cc3ac4da88bd'), 'white', {renderer: 'canvas'});
-        var option_bc74b015b1c94c8691d5cc3ac4da88bd = {
+        var chart_4a334794338549f1a56a35ba3b10a0a3 = echarts.init(
+            document.getElementById('4a334794338549f1a56a35ba3b10a0a3'), 'white', {renderer: 'canvas'});
+        var option_4a334794338549f1a56a35ba3b10a0a3 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -52,39 +52,39 @@
             "name": "\u5546\u54c1",
             "data": [
                 {
-                    "name": "\u5c0f\u7c73",
-                    "value": 74
+                    "name": "\u54c8\u58eb\u5947",
+                    "value": 116
                 },
                 {
-                    "name": "\u4e09\u661f",
-                    "value": 150
+                    "name": "\u8428\u6469\u8036",
+                    "value": 37
                 },
                 {
-                    "name": "\u534e\u4e3a",
-                    "value": 136
+                    "name": "\u6cf0\u8fea",
+                    "value": 28
                 },
                 {
-                    "name": "\u82f9\u679c",
-                    "value": 41
+                    "name": "\u91d1\u6bdb",
+                    "value": 129
                 },
                 {
-                    "name": "\u9b45\u65cf",
-                    "value": 141
+                    "name": "\u7267\u7f8a\u72ac",
+                    "value": 124
                 },
                 {
-                    "name": "VIVO",
-                    "value": 149
+                    "name": "\u5409\u5a03\u5a03",
+                    "value": 42
                 },
                 {
-                    "name": "OPPO",
-                    "value": 78
+                    "name": "\u67ef\u57fa",
+                    "value": 134
                 }
             ],
-            "sort": "descending",
+            "sort": "ascending",
             "gap": 0,
             "label": {
                 "show": true,
-                "position": "top",
+                "position": "inside",
                 "margin": 8
             }
         }
@@ -92,22 +92,22 @@
     "legend": [
         {
             "data": [
-                "OPPO",
-                "\u5c0f\u7c73",
-                "\u534e\u4e3a",
-                "VIVO",
-                "\u82f9\u679c",
-                "\u9b45\u65cf",
-                "\u4e09\u661f"
+                "\u6cf0\u8fea",
+                "\u7267\u7f8a\u72ac",
+                "\u67ef\u57fa",
+                "\u5409\u5a03\u5a03",
+                "\u91d1\u6bdb",
+                "\u54c8\u58eb\u5947",
+                "\u8428\u6469\u8036"
             ],
             "selected": {
-                "\u5c0f\u7c73": true,
-                "\u4e09\u661f": true,
-                "\u534e\u4e3a": true,
-                "\u82f9\u679c": true,
-                "\u9b45\u65cf": true,
-                "VIVO": true,
-                "OPPO": true
+                "\u54c8\u58eb\u5947": true,
+                "\u8428\u6469\u8036": true,
+                "\u6cf0\u8fea": true,
+                "\u91d1\u6bdb": true,
+                "\u7267\u7f8a\u72ac": true,
+                "\u5409\u5a03\u5a03": true,
+                "\u67ef\u57fa": true
             },
             "show": true,
             "padding": 5,
@@ -135,13 +135,13 @@
     },
     "title": [
         {
-            "text": "Funnel-\u57fa\u672c\u793a\u4f8b",
+            "text": "Funnel-\u5185\u90e8\u6807\u7b7e",
             "padding": 5,
             "itemGap": 10
         }
     ]
 };
-        chart_bc74b015b1c94c8691d5cc3ac4da88bd.setOption(option_bc74b015b1c94c8691d5cc3ac4da88bd);
+        chart_4a334794338549f1a56a35ba3b10a0a3.setOption(option_4a334794338549f1a56a35ba3b10a0a3);
     </script>
 </body>
 </html>
