--- a/echarts/bar1.html
+++ b/echarts/bar1.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
-        <script type="text/javascript" src="https://assets.pyecharts.org/assets/themes/romantic.js"></script>
+        <script type="text/javascript" src="https://assets.pyecharts.org/assets/themes/chalk.js"></script>
 
 </head>
 <body>
-    <div id="da1cd49ba0c4472fbf7c52dd261b1ef9" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="85c1bbdfd4414978bca488012bcb7c8c" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_da1cd49ba0c4472fbf7c52dd261b1ef9 = echarts.init(
-            document.getElementById('da1cd49ba0c4472fbf7c52dd261b1ef9'), 'romantic', {renderer: 'canvas'});
-        var option_da1cd49ba0c4472fbf7c52dd261b1ef9 = {
+        var chart_85c1bbdfd4414978bca488012bcb7c8c = echarts.init(
+            document.getElementById('85c1bbdfd4414978bca488012bcb7c8c'), 'chalk', {renderer: 'canvas'});
+        var option_85c1bbdfd4414978bca488012bcb7c8c = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -24,19 +24,34 @@
     "series": [
         {
             "type": "bar",
-            "name": "\u5546\u5bb6A",
+            "name": "product1",
             "legendHoverLink": true,
             "data": [
-                5,
-                30,
-                23,
-                45,
-                25,
-                40
+                {
+                    "value": 12,
+                    "percent": 0.8
+                },
+                {
+                    "value": 23,
+                    "percent": 0.5227272727272727
+                },
+                {
+                    "value": 33,
+                    "percent": 0.868421052631579
+                },
+                {
+                    "value": 3,
+                    "percent": 0.05454545454545454
+                },
+                {
+                    "value": 33,
+                    "percent": 0.4342105263157895
+                }
             ],
             "showBackground": false,
+            "stack": "stack1",
             "barMinHeight": 0,
-            "barCategoryGap": "20%",
+            "barCategoryGap": "50%",
             "barGap": "30%",
             "large": false,
             "largeThreshold": 400,
@@ -53,48 +68,34 @@
         },
         {
             "type": "bar",
-            "name": "\u5546\u5bb6B",
+            "name": "product2",
             "legendHoverLink": true,
             "data": [
-                10,
-                20,
-                40,
-                22,
-                29,
-                50
+                {
+                    "value": 3,
+                    "percent": 0.2
+                },
+                {
+                    "value": 21,
+                    "percent": 0.4772727272727273
+                },
+                {
+                    "value": 5,
+                    "percent": 0.13157894736842105
+                },
+                {
+                    "value": 52,
+                    "percent": 0.611764705882353
+                },
+                {
+                    "value": 43,
+                    "percent": 0.5657894736842105
+                }
             ],
             "showBackground": false,
+            "stack": "stack1",
             "barMinHeight": 0,
-            "barCategoryGap": "20%",
-            "barGap": "30%",
-            "large": false,
-            "largeThreshold": 400,
-            "seriesLayoutBy": "column",
-            "datasetIndex": 0,
-            "clip": true,
-            "zlevel": 0,
-            "z": 2,
-            "label": {
-                "show": true,
-                "position": "top",
-                "margin": 8
-            }
-        },
-        {
-            "type": "bar",
-            "name": "\u5546\u5bb6C",
-            "legendHoverLink": true,
-            "data": [
-                100,
-                26,
-                29,
-                89,
-                59,
-                200
-            ],
-            "showBackground": false,
-            "barMinHeight": 0,
-            "barCategoryGap": "20%",
+            "barCategoryGap": "50%",
             "barGap": "30%",
             "large": false,
             "largeThreshold": 400,
@@ -113,20 +114,13 @@
     "legend": [
         {
             "data": [
-                "\u5546\u5bb6A",
-                "\u5546\u5bb6B",
-                "\u5546\u5bb6C"
+                "product1",
+                "product2"
             ],
             "selected": {
-                "\u5546\u5bb6A": true,
-                "\u5546\u5bb6B": true,
-                "\u5546\u5bb6C": true
-            },
-            "show": true,
-            "padding": 5,
-            "itemGap": 10,
-            "itemWidth": 25,
-            "itemHeight": 14
+                "product1": true,
+                "product2": true
+            }
         }
     ],
     "tooltip": {
@@ -168,12 +162,11 @@
                 }
             },
             "data": [
-                "\u886c\u886b",
-                "\u7f8a\u6bdb\u886b",
-                "\u96ea\u7eba\u886b",
-                "\u88e4\u5b50",
-                "\u9ad8\u8ddf\u978b",
-                "\u889c\u5b50"
+                1,
+                2,
+                3,
+                4,
+                5
             ]
         }
     ],
@@ -199,17 +192,9 @@
                 }
             }
         }
-    ],
-    "title": [
-        {
-            "text": "\u4e3b\u6807\u9898",
-            "subtext": "\u526f\u6807\u9898",
-            "padding": 5,
-            "itemGap": 10
-        }
     ]
 };
-        chart_da1cd49ba0c4472fbf7c52dd261b1ef9.setOption(option_da1cd49ba0c4472fbf7c52dd261b1ef9);
+        chart_85c1bbdfd4414978bca488012bcb7c8c.setOption(option_85c1bbdfd4414978bca488012bcb7c8c);
     </script>
 </body>
 </html>
