--- a/echarts/renderC.html
+++ b/echarts/renderC.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
-        <script type="text/javascript" src="https://assets.pyecharts.org/assets/themes/romantic.js"></script>
+        <script type="text/javascript" src="https://assets.pyecharts.org/assets/themes/essos.js"></script>
 
 </head>
 <body>
-    <div id="da1cd49ba0c4472fbf7c52dd261b1ef9" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="e2988c25c0954dfa847509eee1b1a8d2" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_da1cd49ba0c4472fbf7c52dd261b1ef9 = echarts.init(
-            document.getElementById('da1cd49ba0c4472fbf7c52dd261b1ef9'), 'romantic', {renderer: 'canvas'});
-        var option_da1cd49ba0c4472fbf7c52dd261b1ef9 = {
+        var chart_e2988c25c0954dfa847509eee1b1a8d2 = echarts.init(
+            document.getElementById('e2988c25c0954dfa847509eee1b1a8d2'), 'essos', {renderer: 'canvas'});
+        var option_e2988c25c0954dfa847509eee1b1a8d2 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -24,15 +24,15 @@
     "series": [
         {
             "type": "bar",
-            "name": "\u5546\u5bb6A",
+            "name": "\u5546\u5bb6D",
             "legendHoverLink": true,
             "data": [
-                5,
-                30,
+                98,
+                18,
+                38,
                 23,
-                45,
-                25,
-                40
+                46,
+                77
             ],
             "showBackground": false,
             "barMinHeight": 0,
@@ -53,44 +53,44 @@
         },
         {
             "type": "bar",
-            "name": "\u5546\u5bb6B",
+            "name": "\u5546\u5bb6E",
             "legendHoverLink": true,
             "data": [
+                28,
+                46,
+                30,
+                87,
+                32,
+                92
+            ],
+            "showBackground": false,
+            "barMinHeight": 0,
+            "barCategoryGap": "20%",
+            "barGap": "30%",
+            "large": false,
+            "largeThreshold": 400,
+            "seriesLayoutBy": "column",
+            "datasetIndex": 0,
+            "clip": true,
+            "zlevel": 0,
+            "z": 2,
+            "label": {
+                "show": true,
+                "position": "top",
+                "margin": 8
+            }
+        },
+        {
+            "type": "bar",
+            "name": "\u5546\u5bb6F",
+            "legendHoverLink": true,
+            "data": [
+                14,
+                76,
+                65,
+                87,
                 10,
-                20,
-                40,
-                22,
-                29,
-                50
-            ],
-            "showBackground": false,
-            "barMinHeight": 0,
-            "barCategoryGap": "20%",
-            "barGap": "30%",
-            "large": false,
-            "largeThreshold": 400,
-            "seriesLayoutBy": "column",
-            "datasetIndex": 0,
-            "clip": true,
-            "zlevel": 0,
-            "z": 2,
-            "label": {
-                "show": true,
-                "position": "top",
-                "margin": 8
-            }
-        },
-        {
-            "type": "bar",
-            "name": "\u5546\u5bb6C",
-            "legendHoverLink": true,
-            "data": [
-                100,
-                26,
-                29,
-                89,
-                59,
-                200
+                88
             ],
             "showBackground": false,
             "barMinHeight": 0,
@@ -113,14 +113,14 @@
     "legend": [
         {
             "data": [
-                "\u5546\u5bb6A",
-                "\u5546\u5bb6B",
-                "\u5546\u5bb6C"
+                "\u5546\u5bb6D",
+                "\u5546\u5bb6E",
+                "\u5546\u5bb6F"
             ],
             "selected": {
-                "\u5546\u5bb6A": true,
-                "\u5546\u5bb6B": true,
-                "\u5546\u5bb6C": true
+                "\u5546\u5bb6D": true,
+                "\u5546\u5bb6E": true,
+                "\u5546\u5bb6F": true
             },
             "show": true,
             "padding": 5,
@@ -209,7 +209,7 @@
         }
     ]
 };
-        chart_da1cd49ba0c4472fbf7c52dd261b1ef9.setOption(option_da1cd49ba0c4472fbf7c52dd261b1ef9);
+        chart_e2988c25c0954dfa847509eee1b1a8d2.setOption(option_e2988c25c0954dfa847509eee1b1a8d2);
     </script>
 </body>
 </html>
